[project]
name = "sqlalchemy-neon"
version = "0.1.0"
description = "Native async SQLAlchemy execution for Neon over HTTP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
keywords = ["sqlalchemy", "neon", "postgresql", "serverless", "http", "async"]

dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2.5",
    "aiohttp>=3.11",
    "rich>=14.3.2",
]

[dependency-groups]
dev = [
    "logfire[aiohttp-client,psycopg,asyncpg,sqlalchemy]>=4.22.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "responses>=0.25",
    "asyncpg>=0.30.0",
    "geventhttpclient>=2.3.7",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlalchemy_neon"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
testpaths = ["tests"]
markers = [
    "synctest  : Sync Integration Test",
    "testasync : Async Test",

]

[tool.mypy]
mypy_path = ["src", "."]
explicit_package_bases = true
files = ["src", "tests", "testsupport", "experiments"]
